--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carfinder_switzerland",
   "version": "1.0.1",
   "description": "No-cors autocomplete for google places based on Uber API",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
